# okcolors

./: .gitignore  LICENSE  README.md  justfile  pyproject.toml
src/okcolors/: color.py  commands.py  template.py  viz.py
src/okcolors/palettes/: __init__.py  base.py  base_mono.py  sharp.py  smooth.py  v1.py
src/okcolors/schemes/: __init__.py  roles.py  template.py
templates/: ghostty-theme
tests/: test_colorconv.py  test_generation.py
